# get-aws-inventory

./: 404.html  AI_SERVICES_ADDED.md  CLAUDE.md  DEVELOPMENT.md  IMPLEMENTATION_GUIDE.md  MANIFEST.in  Pipfile  README.md  SERVICE_EXPANSION_COMPLETE.md  get_aws_inventory.py  index.html  mkdocs.yml  new_services_analysis.md  pyproject.toml  upload_to_pypi.sh
.github/workflows/: ci.yml  review-bot.yml
api/: index.html
aws_inventory_scanner/: __init__.py  cli.py  scanner.py  tag_analyzer.py
docs/: Pipfile  README.md  api.md  examples.md  index.md  mkdocs.yml  requirements.txt  resource-list.md  services.md  tag-analysis.md
docs/docs/: installation.md  output.md  troubleshooting.md  usage.md
examples/: index.html
installation/: index.html
output/: index.html
resource-list/: index.html
search/: search_index.json
services/: index.html
stylesheets/: extra.css
tag-analysis/: index.html
tests/: __init__.py  test_boto3_validation.py  test_new_services.py
troubleshooting/: index.html
usage/: index.html
